Refactor section titles and improve figure captions for clarity; update pipeline diagram labels

--- a/main.tex
+++ b/main.tex
@@ -150,7 +150,7 @@
 \input{sections/subsections/translation-lr}
 
 \FloatBarrier
-\section{Methodology}
+\section{Materials and Methods}
 \subsection{Overall Pipeline}
 \input{sections/subsections/pipeline}
 
