--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -17,7 +17,7 @@ Therefore, our motivation is to develop a platform specifically designed for pro
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{img/Data-Page-3.png}
+    \includegraphics[width=\textwidth]{img/Data-Page-3.png}
     \caption{Manual manga translation workflow}
     \label{fig:manual_workflow}
 
