Rename conclusion section to "Conclusion and Future Works" for clarity

--- a/main.tex
+++ b/main.tex
@@ -262,7 +262,7 @@
 
 \section{Limitations and Future Works}
 
-\section{Conclusion}
+\section{Conclusion and Future Works}
 
 \section*{Acknowledgements}
 We would like to express our sincere gratitude to our supervisor, Assoc. Prof. Tran Giang Son, for his invaluable guidance, support, and constructive feedback throughout the duration of this project.
