--- a/main.tex
+++ b/main.tex
@@ -150,7 +150,7 @@
 \input{sections/subsections/translation-lr}
 
 \FloatBarrier
-\section{Methodology}
+\section{Materials and Methods}
 \subsection{Overall Pipeline}
 \input{sections/subsections/pipeline}
 
@@ -262,7 +262,7 @@
 
 \section{Limitations and Future Works}
 
-\section{Conclusion}
+\section{Conclusion and Future Works}
 
 \section*{Acknowledgements}
 We would like to express our sincere gratitude to our supervisor, Assoc. Prof. Tran Giang Son, for his invaluable guidance, support, and constructive feedback throughout the duration of this project.
@@ -271,6 +271,9 @@ We also gratefully acknowledge ICTLab for providing access to the server resourc
 
 \bibliographystyle{IEEEtran}
 \bibliography{references}
+
+\section{Appendix}
+\input{sections/appendix}
 
 \end{CJK*}
 \end{document}
