--- a/sections/subsections/evaluation-process.tex
+++ b/sections/subsections/evaluation-process.tex
@@ -19,7 +19,7 @@ This structure necessitates the \textbf{Many-to-One} mapping strategy used in ou
 \vspace{1em}
 \textbf{Sentence-Level Translation:}
 
-The baseline NMT models (ElanMT variants) and the LoRA fine-tuned model were benchmarked on standard machine translation test sets: \textbf{Flores+, NTREX, and Opus100}. These datasets provide diverse linguistic coverage but lack manga-specific context. Metrics include \textbf{FILL IN HERE}.
+The baseline NMT models (ElanMT variants) and the LoRA \cite{hu2022lora} fine-tuned model were benchmarked on standard machine translation test sets: \textbf{Flores+} \cite{nllb-24}, \textbf{NTREX} \cite{federmann-etal-2022-ntrex}, and \textbf{Opus100} \cite{zhang-etal-2020-improving}. These datasets provide diverse linguistic coverage but lack manga-specific context. Metrics include \textbf{BLEU, chrF++, BERTScore, and COMET}.
 
 \subsubsection{End-to-End Pipeline Evaluation}
 
