--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -3,7 +3,7 @@ To make manga accessible to global audiences, translation plays a vital role.
 
 However, the process is highly labor-intensive because translators not only interpret the text, but also edit comic pages using graphic tools, remove original dialogues, and replace them with translated content. 
 While translation itself is already a demanding task, the additional manual work significantly increases both time and effort, leading to exhaustion, low efficiency, and quality reduction which may impact readers' experience. 
-The manual translation workflow typically involves several steps, illustrated in Figure \ref{fig:manual_workflow}.
+The manual translation workflow typically involves several steps, illustrated in Figure \ref{fig:manual_workflow}. First, the translator reads and comprehends the manga content to understand context and narrative flow. Second, the text is translated from the source language to the target language while preserving meaning and cultural nuances. Third, the original text frames and speech bubbles are removed from the comic page using image editing software. Fourth, the translated text is pasted into the cleaned frames. Finally, the text is formatted and balanced within each bubble to ensure readability and visual harmony with the artwork.
 
 With the advancement of technology, comic translation applications were born to support translators and improve workflow efficiency. They can reduce manual workload by automating tasks so that translators can focus on delivering high-quality translations. We propose an end-to-end application supporting professional translators by extracting speech bubbles and text automatically, along with assisted translation features. This work aims to bridge computer vision and natural language processing to perform automatic manga translation.
 
@@ -17,7 +17,7 @@ Therefore, our motivation is to develop a platform specifically designed for pro
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{img/Data-Page-3.png}
+    \includegraphics[width=\textwidth]{img/Data-Page-3.png}
     \caption{Manual manga translation workflow}
     \label{fig:manual_workflow}
 
