Fix the visual and small requirements from Mr Son

--- a/main.tex
+++ b/main.tex
@@ -32,7 +32,6 @@
 \usepackage{placeins}
 \usepackage{setspace}
 \setstretch{1.15}
-
 \usetikzlibrary{positioning, arrows.meta, calc}
 
 \usepackage{fancyhdr}
@@ -134,8 +133,7 @@
 }
 \addtocontents{toc}{\protect\setcounter{tocdepth}{3}}
 
-\raggedright
-\setlength{\parindent}{1.5em}
+\setlength{\parindent}{0em}
 \section{Introduction}
 \input{sections/introduction}
 
@@ -151,7 +149,7 @@
 \input{sections/subsections/translation-lr}
 
 \FloatBarrier
-\section{Methodology}
+\section{Materials and Methods}
 \subsection{Overall Pipeline}
 \input{sections/subsections/pipeline}
 
@@ -261,9 +259,7 @@
 \subsection{Exception Handling}
 \input{sections/subsections/exception}
 
-\section{Limitations and Future Works}
-
-\section{Conclusion}
+\section{Conclusion and Future Work}
 
 \section*{Acknowledgements}
 We would like to express our sincere gratitude to our supervisor, Assoc. Prof. Tran Giang Son, for his invaluable guidance, support, and constructive feedback throughout the duration of this project.
