--- a/sections/subsections/ucd.tex
+++ b/sections/subsections/ucd.tex
@@ -1,6 +1,6 @@
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{img/Data-group-project.png}
+    \includegraphics[width=0.8\textwidth]{img/Data-group-project.pdf}
     \caption{Use Case Diagram of the Manga Translation System}
     \label{fig:ucd}
 \end{figure}
