--- a/sections/subsubsections/post-yolo.tex
+++ b/sections/subsubsections/post-yolo.tex
@@ -1,4 +1,4 @@
-Although YOLO gives a pixel-precise mask for every panel, it still returns one mask when multiple balloons touch or overlap. Feeding a merged region to an OCR engine makes the text layout denser and usually causes a noticeable drop in recognition accuracy.
+Although YOLO gives a pixel-precise mask for every panel, it still returns one mask when multiple balloons touch or overlap. Feeding a merged region to an OCR engine makes the text layout denser and usually causes a noticeable drop in recognition accuracy.\\
 
 To address this, we introduce a post-processing step that leverages convexity defects to detect and split merged speech bubbles. The key observation is that when two bubbles are connected, the resulting contour often exhibits at least two deep concave regions — known as convexity defects. These defects serve as reliable cues for where a cut should be made.
 The parameters for this algorithm are illustrated in Table \ref{tab:bubble-split-params}.
@@ -20,7 +20,7 @@ MAX\_RECURSION & 2 & Maximum recursion depth \\
 \end{tabular}
 \end{table}
 
-Our algorithm proceeds as described in Algorithm \ref{alg:split-bubbles1} and \ref{alg:split-bubbles2}: for each mask returned by YOLO we extract the largest external contour, compute its convex hull and identify convexity defects—points where the contour deviates remarkably from its convex envelope—retaining only those that are both deep and angularly valid to suppress noise, then merge nearby defects to avoid over-segmentation; subsequently we draw a straight line between the closest pair of defects if at least two valid ones remain, whereas if only a single valid defect exists we skip the cut entirely since one defect alone does not furnish sufficient geometric evidence for a reliable split, and the entire process is applied recursively to each resulting sub-mask up to a predefined depth to handle more complex multi-bubble clusters.
+Our algorithm proceeds as described in Algorithm \ref{alg:split-bubbles1} and \ref{alg:split-bubbles2}: for each mask returned by YOLO we extract the largest external contour, compute its convex hull and identify convexity defects—points where the contour deviates remarkably from its convex envelope—retaining only those that are both deep and angularly valid to suppress noise, then merge nearby defects to avoid over-segmentation; subsequently we draw a straight line between the closest pair of defects if at least two valid ones remain, whereas if only a single valid defect exists we skip the cut entirely since one defect alone does not furnish sufficient geometric evidence for a reliable split, and the entire process is applied recursively to each resulting sub-mask up to a predefined depth to handle more complex multi-bubble clusters.\\
 
 The splitting procedure operates in two tightly-coupled functions. \texttt{SplitConnectedBubbles} serves as the recursive driver: it invokes \texttt{AttemptSplitOnce} on the input mask and, if more than one sub-mask is returned, recursively processes each fragment until the maximum recursion depth is reached. \texttt{AttemptSplitOnce} encapsulates the core geometric logic. It first extracts the largest contour and computes its convex hull. Using OpenCV's \texttt{convexityDefects}, it identifies points where the contour bends inward significantly. Each defect is characterized by four values: the start point $s$, end point $e$, farthest point $f$, and depth $d$. We retain only defects whose depth exceeds \texttt{MIN\_DEFECT\_DEPTH} (13 pixels) and whose interior angle---computed via the dot product of vectors $\vec{v_1} = s - f$ and $\vec{v_2} = e - f$---is less than \texttt{MAX\_ANGLE\_DEG} (170°). This angular constraint filters out shallow, wide concavities that are unlikely to represent merge boundaries.
 
