Edit visual and convert figures to pdf

--- a/sections/subsections/bubble-seg-res.tex
+++ b/sections/subsections/bubble-seg-res.tex
@@ -1,4 +1,4 @@
-Table \ref{tab:yolo-det-per} and Table \ref{tab:yolo-seg-per} illustrate bounding box and instance mask segmentation of four YOLO models: YOLOv8s, YOLOv8n, YOLOv11s, YOLOv11n.
+Table \ref{tab:yolo-det-per} and Table \ref{tab:mask-seg-comparison} illustrate bounding box and instance mask segmentation of four YOLO models: YOLOv8s, YOLOv8n, YOLOv11s, YOLOv11n.
 \begin{table}[H]
 \centering
 \begin{tabular}{lcccc}
