--- a/sections/subsections/dataset.tex
+++ b/sections/subsections/dataset.tex
@@ -7,7 +7,7 @@ In this work, only images containing annotated speech bubbles are used for model
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.7\textwidth]{img/bubble-distribution.png}
+    \includegraphics[width=0.7\textwidth]{img/bubble-distribution.pdf}
     \caption{Speech bubble distribution in Manga109 dataset following COCO standard.}
     \label{fig:bubble_distribution}
 \end{figure}
