--- a/sections/subsections/pipeline.tex
+++ b/sections/subsections/pipeline.tex
@@ -22,29 +22,29 @@
     }
     
     % --- LEFT COLUMN ---
-    \node[picnode] (img1) {\includegraphics[width=4.5cm]{img/1.png}};
-    \node[picnode, below=of img1] (img2) {\includegraphics[width=4cm]{img/2.png}};
-    \node[picnode, below=of img2] (img3) {\includegraphics[width=4cm]{img/3.png}};
+    \node[picnode] (img1) {\includegraphics[width=4cm]{img/1.pdf}};
+    \node[picnode, below=of img1] (img2) {\includegraphics[width=4cm]{img/2.pdf}};
+    \node[picnode, below=of img2] (img3) {\includegraphics[width=4cm]{img/3.pdf}};
     % --- RIGHT COLUMN ---
     % Place Image 5 to the right of Image 1
-    \node[picnode, right=of img1] (img5) {\includegraphics[width=4cm]{img/5.png}};
+    \node[picnode, right=of img1] (img5) {\includegraphics[width=4cm]{img/5.pdf}};
     
     % Place Image 4 to the right of Image 3
-    \node[picnode, right=of img3] (img4) {\includegraphics[width=4cm]{img/6.png}};
+    \node[picnode, right=of img3] (img4) {\includegraphics[width=4cm]{img/6.pdf}};
 
     % Place Image 6 
-    \node[picnode, below=of img5] (img6) {\includegraphics[width=4cm]{img/4.png}};
+    \node[picnode, below=of img5] (img6) {\includegraphics[width=4cm]{img/4.pdf}};
 
     % -----------------------------------------------------------
     % 3. Draw Arrows
     % -----------------------------------------------------------
     
     % Left Vertical Flow
-    \draw[->] (img1) -- node[right, font=\small] {1. Bubble Segmentation} (img2);
+    \draw[->] (img1) -- node[left, font=\small] {1. Bubble Segmentation} (img2);
     \draw[->] (img2) -- node[right, font=\small] {3. Convex Defect}(img3);
 
     % Horizontal Connections
-    \draw[->] (img2) -- node[right, font=\small] {2. Overlay mask} (img5);
+    \draw[->] (img2) -- node[right, font=\small] {2. Mask Overlay} (img5);
     \draw[->] (img3) -- node[above, font=\small] {4. OCR} (img4);
 
     % Right Vertical Flow (Sandwich)
