--- a/sections/subsubsections/bubble-seg-pip.tex
+++ b/sections/subsubsections/bubble-seg-pip.tex
@@ -2,7 +2,7 @@ The bubble segmentation pipeline systematically processes raw manga pages---whet
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.9\textwidth]{img/segmentation_pipeline.png}
+    \includegraphics[width=0.9\textwidth]{img/segmentation_pipeline.pdf}
     \caption{Bubble Segmentation Pipeline}
     \label{fig:bubble-seg-pipeline}
 \end{figure}
