--- a/sections/subsubsections/ocr-pip.tex
+++ b/sections/subsubsections/ocr-pip.tex
@@ -2,7 +2,7 @@ The OCR pipeline processes segmented speech bubble regions through a systematic 
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{img/ocr_pipeline.png}
+    \includegraphics[width=\textwidth]{img/ocr_pipeline.pdf}
     \caption{OCR Pipeline}
     \label{fig:ocr_pipeline}
 \end{figure}
