--- a/sections/subsubsections/yolo-architecture.tex
+++ b/sections/subsubsections/yolo-architecture.tex
@@ -12,13 +12,13 @@ The architectures of the C2PSA module, the attention block in YOLOv11, the C2f m
     \centering
     \begin{subfigure}{0.48\textwidth}
         \centering
-        \includegraphics[width=0.9\linewidth]{img/C2PSA.png}
+        \includegraphics[width=0.9\linewidth]{img/C2PSA.pdf}
         \caption{C2PSA module}
     \end{subfigure}
     \hspace{-1.5em}
     \begin{subfigure}{0.48\textwidth}
         \centering
-        \includegraphics[width=0.7\linewidth]{img/PSABlock.png}
+        \includegraphics[width=0.7\linewidth]{img/PSABlock.pdf}
         \caption{Attention block (YOLOv11)}
     \end{subfigure}
     \caption{Architecture of PSA-based modules: (a) C2PSA module; (b) Attention block used in YOLOv11 \cite{hidayatullah2025yolov8_yolo11_review}}
@@ -30,13 +30,13 @@ The architectures of the C2PSA module, the attention block in YOLOv11, the C2f m
     \centering
     \begin{subfigure}{0.48\textwidth}
         \centering
-        \includegraphics[width=0.9\linewidth]{img/C2f.png}
+        \includegraphics[width=0.9\linewidth]{img/C2f.pdf}
         \caption{C2f module}
     \end{subfigure}
     \hspace{-1.5em}
     \begin{subfigure}{0.48\textwidth}
         \centering
-        \includegraphics[width=0.7\linewidth]{img/C3k2.png}
+        \includegraphics[width=0.7\linewidth]{img/C3k2.pdf}
         \caption{C3k2 module (YOLOv11)}
     \end{subfigure}
     \caption{Comparison of backbone modules: (a) C2f module; (b) C3k2 module adopted in YOLOv11 \cite{hidayatullah2025yolov8_yolo11_review}}
@@ -51,7 +51,7 @@ The architectures of the C2PSA module, the attention block in YOLOv11, the C2f m
 
     \begin{figure}[H]
         \centering
-        \includegraphics[width=0.7\linewidth]{img/YOLACT.png}
+        \includegraphics[width=0.7\linewidth]{img/YOLACT.pdf}
         \caption{YOLACT architecture}
         \label{fig:yolo-segmentation-head}
     \end{figure}
