Complete abstract, add panel results

--- a/main.tex
+++ b/main.tex
@@ -219,6 +219,9 @@
 \subsection{Bubble Segmentation}
 \input{sections/subsections/bubble-seg-res.tex}
 
+\subsection{Panel Segmentation}
+\input{sections/subsections/panel-seg-res.tex}
+
 \subsection{OCR}
 \input{sections/subsections/ocr-results.tex}
 
@@ -261,6 +264,7 @@
 \input{sections/subsections/exception}
 
 \section{Conclusion and Future Work}
+\input{sections/conclusion}
 
 \section*{Acknowledgements}
 We would like to express our sincere gratitude to our supervisor, Assoc. Prof. Tran Giang Son, for his invaluable guidance, support, and constructive feedback throughout the duration of this project.
