--- a/references.bib
+++ b/references.bib
@@ -595,3 +595,12 @@
   url={https://openreview.net/forum?id=nZeVKeeFYf9}
 }
 
+@InProceedings{Xie_2025_CVPR,
+  author    = {Xie, Minshan and Lin, Jian and Liu, Hanyuan and Li, Chengze and Wong, Tien-Tsin},
+  title     = {Advancing Manga Analysis: Comprehensive Segmentation Annotations for the Manga109 Dataset},
+  booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+  year      = {2025},
+  pages     = {8869--8878}
+}
+
+
